--- a/free_rooms/easy-level/introduction_to_owasp_zap.mkd
+++ b/free_rooms/easy-level/introduction_to_owasp_zap.mkd
@@ -24,7 +24,7 @@
    1. No answer needed  
 
 #### [Task 8] Brutefoce Web Login 
-   1. 
+   1. password
 
 #### [Task 9] ZAP Extensions 
    1. No answer needed  
